Change show member and basic

--- a/src/app/components/members/members.component.html
+++ b/src/app/components/members/members.component.html
@@ -98,16 +98,10 @@
 
 <div class="basic-layout">
   <div class="container-fluid mt-16">
-    <div class="row ">
+    <div class="row left-contents">
       <div #ht_container class="ht-container">
-      <app-sheet
-        #grid
-        [options]="options"
-        [class.isManual]="isManual"
-      ></app-sheet>
+        <app-sheet #grid [options]="options" [class.isManual]="isManual"></app-sheet>
+      </div>
     </div>
-    </div>
-    
   </div>
- 
 </div>
