--- a/src/app/components/members/members.component.scss
+++ b/src/app/components/members/members.component.scss
@@ -1,9 +1,11 @@
+
+.left-contents {
+  padding-left: 18px;
+  margin-right: 15px;
+}
+
 .ht-container {
   width: 818px;
-}
-.left-contents {
-  float: left;
-  margin-right: 15px;
 }
 
 .basic-layout {
