--- a/src/app/components/section-forces/section-forces.component.scss
+++ b/src/app/components/section-forces/section-forces.component.scss
@@ -34,6 +34,7 @@
     }
     .tobble-section {
       display: flex;
+      flex-wrap: wrap;
       align-items: center;
       column-gap: 8px;
       padding: 16px 16px 0;
@@ -111,13 +112,20 @@
     padding-right: 10px;
     padding-bottom: 10px;
     background: var(--base-900);
-    // height: 688px;
-    height: 500px;
+    height: 680px;
+    // height: 500px;
 }
 
-.section-img{
-    padding-right: 40px;
-    img{
-      width: 100%;
+.s-border{
+    position: fixed;
+    width: 89.5%;
+}
+
+.disabled {
+    pointer-events: none;
+    color: var(--text_disabled);
+    a {
+        pointer-events: none;
+        color: var(--text_disabled);
     }
 }
