--- a/src/app/components/material-strength-verification-conditions/material-strength-verification-conditions.component.html
+++ b/src/app/components/material-strength-verification-conditions/material-strength-verification-conditions.component.html
@@ -112,9 +112,9 @@
                 <td style="text-align: left; font-size: 12px;">{{item.title}}</td>
                 <td class="center" width="70px">
                   <input type="checkbox" name="pla_ex{{i}}" id="pla_ex{{i}}" [value]="item.id"
-                    [checked]="item.selected" />
+                    [checked]="item.selected"  (change)="setCheckboxPlastic(i)"/>
                 </td>
-                <td  style="text-align: center;" width="80px" *ngIf="!item.selected ; else elseBlock" >
+                <td  style="text-align: center;" width="80px" *ngIf="!item.selected || item.type == null; else elseBlock" >
                   <div class="diagonalRising"></div>
                 </td>
               </tr>
