check level earthquake

--- a/src/app/components/material-strength-verification-conditions/material-strength-verification-conditions.component.html
+++ b/src/app/components/material-strength-verification-conditions/material-strength-verification-conditions.component.html
@@ -114,8 +114,7 @@
                   <input type="checkbox" name="pla_ex{{i}}" id="pla_ex{{i}}" [value]="item.id"
                     [checked]="item.selected"  (change)="setCheckboxPlastic(i)"/>
                 </td>
-                <td  style="text-align: center;" width="80px" *ngIf="!item.selected || item.type == null; else elseBlock" >
-                  <div class="diagonalRising"></div>
+                <td class="diagonalRising" style="text-align: center;" width="80px" *ngIf="!item.selected || i==0; else elseBlock" >                  
                 </td>
               </tr>
               <ng-template #elseBlock>                
