Cross section-force: add margin bottom for switch

--- a/src/app/components/section-forces/section-forces.component.scss
+++ b/src/app/components/section-forces/section-forces.component.scss
@@ -85,7 +85,7 @@
           border-radius: 8px;
           border: 1px solid var(--base-700);
           background: var(--base-950);
-
+          margin-bottom: 5px;
           &.active {
               border: 1px solid var(--primary-800);
               background: var(--checkbox_selected);
