--- a/src/app/components/section-forces/section-forces.component.scss
+++ b/src/app/components/section-forces/section-forces.component.scss
@@ -34,7 +34,6 @@
     }
     .tobble-section {
       display: flex;
-      flex-wrap: wrap;
       align-items: center;
       column-gap: 8px;
       padding: 16px 16px 0;
@@ -85,7 +84,7 @@
           border-radius: 8px;
           border: 1px solid var(--base-700);
           background: var(--base-950);
-          margin-bottom: 5px;
+
           &.active {
               border: 1px solid var(--primary-800);
               background: var(--checkbox_selected);
@@ -112,20 +111,13 @@
     padding-right: 10px;
     padding-bottom: 10px;
     background: var(--base-900);
-    height: 680px;
-    // height: 500px;
+    // height: 688px;
+    height: 500px;
 }
 
-.s-border{
-    position: fixed;
-    width: 89.5%;
-}
-
-.disabled {
-    pointer-events: none;
-    color: var(--text_disabled);
-    a {
-        pointer-events: none;
-        color: var(--text_disabled);
+.section-img{
+    padding-right: 40px;
+    img{
+      width: 100%;
     }
 }
