change placeholder durable

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -308,7 +308,7 @@
             <div class="d-flex service-life">
               <p translate>fatigues.durable</p>
               <input
-                placeholder="input"
+                placeholder="100"
                 id="T"
                 name="T"
                 type="text"
