文字色変更

--- a/src/app/components/alert-dialog/alert-dialog.component.scss
+++ b/src/app/components/alert-dialog/alert-dialog.component.scss
@@ -27,7 +27,7 @@
       color: var(--text_main);
     }
     &.secondary {
-      color: var(text_sub);
+      color: #222;
       margin-right: 8px;
     }
     &:hover {
