--- a/src/styles.scss
+++ b/src/styles.scss
@@ -139,7 +139,8 @@ body {
         color: var(--text_main);
     }
     div.pq-editor-outer {
-        background: transparent !important;
+        // background: transparent !important;
+        background: var(--table_empty_bg) !important;
     }
     div.pq-theme {
         color: var(--primary);
