--- a/src/app/components/calculation-print/calculation-print.component.scss
+++ b/src/app/components/calculation-print/calculation-print.component.scss
@@ -10,15 +10,28 @@
     display: flex;
     flex-direction: column;
     row-gap: 16px;
+
     .download-items {
         display: flex;
         flex-direction: row;
         column-gap: 24px;
-    
+
         .download-item {
             width: 348px;
+
+            .title {
+                .checkbox-all {
+                    margin-right: 8px;
+                }
+
+                input[type="checkbox"]:checked {
+                    accent-color: #00C95F;
+                    background-color: opacify($color: #000000, $amount: 0);
+                }
+            }
         }
-    }    
+    }
+
     #downloadButton {
         font-size: 16px;
         font-weight: 700;
@@ -27,6 +40,7 @@
         color: var(--text-main);
         border: none;
         border-radius: 4px;
+
         &:disabled {
             background: var(--primary-800);
             opacity: 0.7;
@@ -39,10 +53,11 @@
     display: flex;
     flex-direction: column;
     row-gap: 16px;
-    
+
     .print-item {
         width: 348px;
     }
+
     #printButton {
         font-size: 16px;
         font-weight: 700;
@@ -51,6 +66,7 @@
         color: var(--text-main);
         border: none;
         border-radius: 4px;
+
         &:disabled {
             background: var(--primary-800);
             opacity: 0.7;
@@ -64,6 +80,7 @@
     align-items: center;
     margin: 0;
 }
+
 // .checkbox-parts.disabled {
 //     background: var(--primary-800);
 //     opacity: 0.7;
