--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -179,7 +179,7 @@
           fill="white"
         />
       </svg>
-      <h1 class="title-filename">{{ fileName }}</h1>
+      <h1 class="title-filename">{{ shortenFilename(fileName) }}</h1>
     </div>
   </ng-template>
 
