--- a/src/app/components/sheet/sheet.component.scss
+++ b/src/app/components/sheet/sheet.component.scss
@@ -25,6 +25,7 @@
     padding: 20px 10px;
     border-radius: 4px;
     background: #fff;
+    z-index: 10;
 
     &::before {
         content: "";
